fix postman tests;